--- a/index.html
+++ b/index.html
@@ -61,3 +61,139 @@
   </div>
     </div>
       </div>
+<!DOCTYPE>
+<html>
+<head>
+<link rel="stylesheet" type = "text/css" href= "peachpolls.css"> </link>
+<link rel="stylesheet" type = "text/css" href= "About.css"> </link>
+<script src="dropdown.js"></script>
+</head>
+<body>
+
+  <div class="topnav">
+    <a class="brand" >
+      <img src="peach.png" width="50" height="40" class="d-inline-block align-top" alt="PeachPolls">
+      Peach Polls
+    </a>
+    <div class ="table">
+    <ul>
+    <li><a href="home.html">Home</a></li>
+    <li><div class="dropdown">
+    <button onclick="myFunction()" class="dropbtn">Candidates</button>
+    <div id="myDropdown" class="dropdown-content">
+        <a href="cangov.html">Governor</a>
+        <a href="canCR.html">Attorney General</a>
+        <a href="canCE.html">Commissioner of Labor</a>
+    </div>
+  </div></li>
+  <li>  <a href="Location.html">Location</a></li>
+  <li>  <a href="polls.html">Polls</a></li>
+  <li>  <a href="history.html">History</a></li>
+  <li>  <a href="parties.html">Parties</a></li>
+  <li>  <a href="about.html">About</a></li>
+  </ul>
+  </div>
+  </div>
+<div>
+<h3 id="About">About Us</h3>
+</div>
+
+
+<div id= "vision"  >
+<u><h1>Vision</h1></u>
+</div>
+
+
+<p id="text">Our vision is to inform citizens about the different elections that are occuring in their surrounding areas and to encourage them to get involved in them communities.We will
+  inform them about the different polls to go to when the voting date comes and will provide them with different information about each candidate. From this website,
+  we want to see a change in our society and in humanity. Come join us as we try to change the <strong>World!<strong>
+</p>
+
+
+<div id= "staff">
+<u><h1>Staff</h1></u>
+</div>
+
+<div class="row">
+  <div class="column">
+    <h3>Noa</h3>
+    <img src="Noa.jpg" alt="Noa">
+  </div>
+  <div class="column">
+    <h3>Taylor</h3>
+    <img src="Taylor.jpg" alt="Taylor">
+
+  </div>
+  <div class="column">
+    <h3>Kaycie</h3>
+    <img src="Kaycie4.png" id="Kaycie" alt="Kaycie">
+    
+  </div>
+  <div class="column">
+    <h3>Kameela</h3>
+    <img src="Kameela2.png" id="Kameela" alt="Taylor">
+    <p>
+  </div>
+
+
+</div>
+  <!DOCTYPE html>
+<html>
+<head>
+<link rel="stylesheet" type = "text/css" href= "peachpolls.css"> </link>
+<script src="dropdown.js"></script>
+<title>Peach Polls</title>
+</head>
+<body>
+  <div class="topnav">
+    <a class="brand" >
+      <img src="peach.png" width="50" height="40" class="d-inline-block align-top" alt="PeachPolls">
+      Peach Polls
+    </a>
+    <div class ="table">
+    <ul>
+    <li><a href="home.html">Home</a></li>
+    <li><div class="dropdown">
+    <button onclick="myFunction()" class="dropbtn">Candidates</button>
+    <div id="myDropdown" class="dropdown-content">
+        <a href="cangov.html">Governor</a>
+        <a href="canCR.html">Attorney General</a>
+        <a href="canCE.html">Commissioner of Labor</a>
+    </div>
+  </div></li>
+  <li>  <a href="Location.html">Location</a></li>
+  <li>  <a href="polls.html">Polls</a></li>
+  <li>  <a href="history.html">History</a></li>
+  <li>  <a href="parties.html">Parties</a></li>
+  <li>  <a href="about.html">About</a></li>
+  </ul>
+  </div>
+  </div>
+
+<h2>Comissioner of Labor</h2>
+
+<h3>Mark Butler</h3>
+<img src=markbutler.jpg atl="Mark Butler" height=400px>
+
+<p>Mark Butler became Georgia's ninth Commissioner of Labor on January 10, 2011.
+  As the first Republican to head the Georgia Department of Labor,
+  Commissioner Butler is committed to reshaping the operations of a labor department.
+  Commissioner Butler's goal is to create valuable workforce solutions through strategic alliances and community relationships.
+  The programs at the Georgia Department of Labor reflect Butler's dedication to improving the agency's relationships with employers, job seekers and Georgia's future workforce.
+
+  Prior to taking office, Commissioner Butler served eight years in the Georgia General Assembly, representing House District 18. During that time, he served as the Chairman of the House Appropriations Human Resources Sub-Committee, which oversees all operations of the budget for several of the largest state agencies.
+  Commissioner Butler, a native of Carrollton, graduated from Auburn University with a degree in Public Administration.
+<p>
+<h3>Actions in Office</h3>
+
+<ul style="list-style-type:disc">
+  <li>Commissioner Butler formed the Regional Coordinator Program in 2011 and, subsequently, the Business Service Unit in 2013. These programs serve to foster mutually beneficial relationships with Georgia's employers and economic developers.
+    Both programs reflect Commissioner Butler's dedication to the business community and employer-driven service delivery.</li>
+  <li>In order to better serve Georgia's job seekers, Commissioner Butler created the Special Workforce Assistance Team.
+    This team has designed a job readiness program to help unemployed and underemployed people better market themselves to employers.</li>
+  <li>In 2014, Commissioner Butler developed the Labor Department's newest program, Customized Recruitment, in order to bridge the gap between employers and job seekers.
+    This program is currently only available to newly located businesses and streamlines the recruiting process.</li>
+  <li>Commissioner Butler understands that a prepared workforce is a key to Georgia's economic future. As such, he developed the GeorgiaBEST program. GeorgiaBEST is a high school based program that certifies students as "work ready" based on their understanding of soft skills and vital work habits.
+     GeorgiaBEST has become so popular that the Georgia Department of Labor has recently expanded the program to include middle school students. </li>
+
+</ul>
